# cmake-cmd-exe

./: CMakeLists.txt  Readme.md  cmake_cache_find.cxx  fake_cmd.cmake  output.txt
add_custom_command/: CMakeLists.txt  README.md  output.txt
add_test/: CMakeLists.txt  README.md
ctest/: CMakeLists.txt
execute_process/: CMakeLists.txt  README.md  safer_cmd.cmake  test_cmd.cmake
fake_cmd/: CMakeLists.txt  fake_cmd.cmake  fake_cmd.cxx.in  naughty.cxx.in
